more deployer friendly

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
 .bundle
 db/*.sqlite3
 log/*.log
-tmp/
+tmp/*
+public/stylesheets/.sass-cache/*
 .sass-cache/
-vendor/cache/*
 config/database.yml
-.powrc
-.rvmrc
-
+.rbenv-gemsets
+.rbenv-vars
+.powconfig
+.powenv
+*.swp
+*.swo
 .DS_Store
+*.DS_Store
+public/assets
+public/assets/*
