Changes to work nice with docker

--- a/production.env
+++ b/production.env
@@ -1,5 +1,5 @@
-RAILS_ENV=development
+RAILS_ENV=production
 POLLSTER_ENV=global
 TLD_SIZE=1
-POLLSTER_URL=haystack.dev
-POLLSTER_HOSTNAME=haystack.dev
+POLLSTER_URL=pollster.it
+POLLSTER_HOSTNAME=www.pollster.it
